--- a/views/index.handlebars
+++ b/views/index.handlebars
@@ -1,10 +1,16 @@
-<style media='screen'>
-/*Add style here*/
-background-color:
+<style>
+h1 {
+  font-family: Arial, "Helvetica Neue", Helvetica, sans-serif;
+  text-align: right;
+  font-size: 40px;
+  font-variant: small-caps;
+  margin: 150px 50px 0 0;
+}
 </style>
 
-<h1>Eat-Da-Burger!</h1>
+<h1>The Return of the Gourmet Burger</h1>
+
 
         <form action="/{{this.id}}?_method=PUT" method="POST">
-          
+
 </form>
