--- a/views/index.handlebars
+++ b/views/index.handlebars
@@ -1,22 +1,34 @@
-<style>
-h1 {
-  font-family: Arial, "Helvetica Neue", Helvetica, sans-serif;
-  text-align: right;
-  font-size: 40px;
-  font-variant: small-caps;
-  margin: 150px 50px 0 0;
-}
-</style>
-
-<h1>The Return of the Gourmet Burger</h1>
-
-
-
-
-
-
-
-
-        <form action="/{{this.id}}?_method=PUT" method="POST">
-
-</form>
+<!-- Handlebars code -->
+<!-- Loop through the data -->
+<div class="container">
+  <!-- Row one of one -->
+  <div class="row">
+    <!-- Column one of two -->
+    <div class="col-md-12" id="heading">
+    <h1>The Return of the Gourmet Burger</h1>
+    </div>
+    <!-- Row one, column two -->
+    <div class="col-md-12" class="task">
+        <!-- Column two, first row. Post the id and burger name in a pre-formatted text-->
+        <div class="row">
+          {{#each data}}
+            {{#unless this.devoured}}
+          <div class="col-md-12 text left">
+            <pre>{{this.id}}.{{this.burger_name}}</pre>
+          </div>
+        <!-- Create a button that will send the this.id back to the server, unless devoured is 1 -->
+        <div class="col-12-md text left">
+          <form action="/burgers/update?_method=PUT" class="button-size">
+            <!-- Hiding the id from the user -->
+            <input type="hidden" name="id" type="text" value={{this.id}}>
+            <br>
+            <!-- Send the data to the server -->
+            <button type="submit" class="btn btn-default">DEVOUR IT!</button>
+          </form>
+        </div>
+        {{/unless}}
+        {{/each}}
+        </div>
+      </div>
+    </div>
+</div>
