--- a/views/layouts/main.handlebars
+++ b/views/layouts/main.handlebars
@@ -1,8 +1,8 @@
 <!DOCTYPE html>
-<html lang="en">
+<!-- <html lang="en"> -->
 <head>
-	<meta charset="UTF-8">
-		<link rel="stylesheet" href="../public/assets/css/style.css" type="text/css" />
+	<!-- <meta charset="UTF-8"> -->
+		<!-- <link rel="stylesheet" href="../public/assets/css/style.css" type="text/css" /> -->
 		<title>Eat-Da-Burger!</title>
 </head>
 
