--- a/public/assets/css/style.css
+++ b/public/assets/css/style.css
@@ -1,6 +1,6 @@
-h1 {
+#heading {
   font-family: Arial, "Helvetica Neue", Helvetica, sans-serif;
   text-align: right;
-  font-size: 22px;
+  font-size: 80;
   font-variant: small-caps;
 };
