--- a/views/layouts/main.handlebars
+++ b/views/layouts/main.handlebars
@@ -3,7 +3,7 @@
 <head>
 	<meta charset="UTF-8">
 	<title>Eat-Da-Burger!</title>
-<link rel="stylesheet" href="../public/assets/css/style.css">
+	<link rel="stylesheet" type="text/css" href="../public/stylesheets/main.css">
 </head>
 
 <body>
