--- a/views/index.handlebars
+++ b/views/index.handlebars
@@ -5,7 +5,7 @@
   <div class="row">
     <!-- Row one, column one -->
     <div class="col-md-12" id="heading">
-    <h1>The Return of the Gourmet Burger</h1>
+    <h1>The Return of the Jedi Gourmet Burger</h1>
     </div>
       <div class="col-md-6" class="task">
         <div class="row">
